# teams_notifier

./: .env.example  .gitignore  README.md  TeamsNotifier.spec  app_entry.py  build.sh  com.sascha.teams-notifier.plist  pyproject.toml  requirements.txt  setup.py  start.command
resources/: icon.icns
src/: __init__.py  config.py  main.py
src/audio/: __init__.py  sound_player.py
src/monitors/: __init__.py  log_stream_monitor.py  notification_monitor.py
src/ui/: __init__.py  alert_window.py  menu_bar.py
src/webhook/: __init__.py  sender.py
tests/: test_config.py  test_monitor.py  test_sound_player.py  test_ui.py  test_webhook.py
