[project]
name = "teams-notifier"
version = "0.1.0"
description = "A macOS alert light application that monitors Microsoft Teams for new chat messages and mentions"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Sascha" }
]
keywords = ["teams", "notifications", "macos", "alert"]

dependencies = [
    "nicegui>=1.4.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-UserNotifications>=10.0",
    "rumps>=0.4.0",
    "pywebview>=5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=7.0",
]

[project.scripts]
teams-notifier = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
    "pytest>=7.0",
]
